--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="hsl(217, 16%, 45%)" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Can you beat our AI in this simple game? Rock, Paper, Scissors!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Rock, Paper, Scissors!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
