--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="hsl(217, 16%, 45%)" />
+    <meta name="apple-mobile-web-app-status-bar" content="hsl(217, 16%, 45%)">
+    <meta name="author" content="Sodiq Sanusi">
     <meta
       name="description"
       content="Can you beat our AI in this simple game? Rock, Paper, Scissors!"
@@ -42,5 +44,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      if('serviceWorker' in navigator){
+        navigator.serviceWorker.register('./sw.js')
+      }
+    </script>
   </body>
 </html>
